mikec/tests/PASS/types/chars/1.mc
char main(char z){
    char x = 'a';
    return x;
}
