mikec/tests/FAIL/semantic/test-type3.mc
int main(){
  int a = 'a';
	return;
}
